[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "nltk>=3.9.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
